# delivery-service

./: .env  Dockerfile  README.md  config.py  docker-compose.yml  main.py  requirements.txt
.github/workflows/: python-app.yml
backend/: .gitignore  Dockerfile  config.py  locations.csv  main.py  pyproject.toml  requirements.txt
backend/core/: init_data_db.py  model_utils.py  models.py  schemas.py
backend/routers/: cargo.py  cars.py  geo.py  gql.py
backend/tasks/: cars_task.py
backend/tests/: test_cargo_api.py
core/: database.py  init_data_db.py  model_utils.py  models.py  schemas.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/css/: styles.css
frontend/js/: maps.js
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: MapComponent.css  MapComponent.js
nginx/: nginx.conf
routers/: cargo.py  cars.py  geo.py
templates/: index.html
tests/: conftest.py  test_cargo_api.py
