[tool.poetry]
name = "backend"
version = "1.1.0"
description = "Сервис поиска ближайших машин для перевозки грузов."
authors = ["dsuhoi <dsuh0i.h8@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
asyncpg = "^0.28.0"
geopy = "^2.3.0"
psycopg2-binary = "^2.9.6"
redis = "^4.6.0"
celery = "^5.3.1"
uvicorn = "^0.22.0"
pydantic = "^2.0.2"
pydantic-settings = "^2.0.1"
sqlalchemy = "^2.0.18"
pandas = "^2.0.3"
strawberry-graphql = {extras = ["fastapi"], version = "^0.194.4"}
geoalchemy2 = "^0.14.0"
shapely = "^2.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
